# sdl2-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
source/: main.cpp
